--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.10.4",
@@ -22,13 +23,16 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.9.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
+    "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "react-timeago": "^8.2.0",
+    "react-toastify": "^11.0.5",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
